--- a/www-root/css/style.css
+++ b/www-root/css/style.css
@@ -114,3 +114,23 @@ div.container {
                 border-top: 1px solid #cccccc;
                 padding: 5px 0;
             }
+
+        div.container .competition-container {
+            background: #f2f2f2;
+            border: 1px solid #e8e8f8;
+            padding: 3px;
+            border-radius: 4px;
+        }
+            div.container .competition-container .event-container {
+                font-size: 12px;
+                background: #ffffff;
+                border: 1px solid #e8e8e8;
+                padding: 3px;
+                border-radius: 4px;
+                margin: 3px;
+                padding: 15px;
+            }
+
+                div.container .competition-container .event-container span {
+                    font-weight: bold;
+                }
