--- a/www-root/css/style.css
+++ b/www-root/css/style.css
@@ -3,14 +3,13 @@ body {
     color: #666666;
     text-align: center;
 
-
-    background: #a0a0a0; /* Old browsers */
-    background: -moz-linear-gradient(top,  #a0a0a0 0%, #949494 48%, #787878 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a0a0a0), color-stop(48%,#949494), color-stop(100%,#787878)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  #a0a0a0 0%,#949494 48%,#787878 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  #a0a0a0 0%,#949494 48%,#787878 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  #a0a0a0 0%,#949494 48%,#787878 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  #a0a0a0 0%,#949494 48%,#787878 100%); /* W3C */
+    background: #787878; /* Old browsers */
+    background-image: -moz-linear-gradient(top,  #a0a0a0 0%, #949494 48%, #787878 100%); /* FF3.6+ */
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#a0a0a0), color-stop(48%,#949494), color-stop(100%,#787878)); /* Chrome,Safari4+ */
+    background-image: -webkit-linear-gradient(top,  #a0a0a0 0%,#949494 48%,#787878 100%); /* Chrome10+,Safari5.1+ */
+    background-image: -o-linear-gradient(top,  #a0a0a0 0%,#949494 48%,#787878 100%); /* Opera 11.10+ */
+    background-image: -ms-linear-gradient(top,  #a0a0a0 0%,#949494 48%,#787878 100%); /* IE10+ */
+    background-image: linear-gradient(to bottom,  #a0a0a0 0%,#949494 48%,#787878 100%); /* W3C */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a0a0a0', endColorstr='#787878',GradientType=0 ); /* IE6-9 */
 
     height: 100%;
@@ -119,13 +118,14 @@ div.container {
             background: #f2f2f2;
             border: 1px solid #e8e8f8;
             padding: 3px;
+            margin: 0 0 10px 0;
             border-radius: 4px;
+            font-size: 14px;
         }
             div.container .competition-container .event-container {
-                font-size: 12px;
+                font-size: 13px;
                 background: #ffffff;
                 border: 1px solid #e8e8e8;
-                padding: 3px;
                 border-radius: 4px;
                 margin: 3px;
                 padding: 15px;
